Fixing scrollbar styling

--- a/src/components/SelectedArtists/SelectedArtistsPane.css
+++ b/src/components/SelectedArtists/SelectedArtistsPane.css
@@ -42,3 +42,10 @@
     color: #b3b3b3;
 }
 
+::-webkit-scrollbar {
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: hsla(0,0%,100%,.3);
+}
